test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/enforce-validate-existing-allow-existing-violations/bad-pod-ready.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod-allow-existing
  namespace: default
