test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/enforce-validate-existing-allow-existing-violations/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-labels
spec:
  background: true
  rules:
    - name: check-labels
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        failureAction: Enforce
        allowExistingViolations: false
        deny:
          conditions:
            any:
            - key: "{{ request.object.metadata.labels.foo || '' }}"
              operator: NotEquals
              value: 'bar'
