test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/enforce-validate-existing-allow-existing-violations/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: enforce-validate-existing
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: bad-pod.yaml
    - assert:
        file: bad-pod-ready.yaml
  - name: create policy
    use:
      template: ../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: check-labels-allow-existing
  - name: step-03
    try:
    - script:
        content: ./bad-pod-update-test.sh
        timeout: 30s
